# Raytracing

./: CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
Final_Render/: TestRender.ppm
Module_Implementations/: Camera-IMPL.cpp  Color-IMPL.cpp  Interval-IMPL.cpp  Randomizer-IMPL.cpp  Ray-IMPL.cpp  Raytracer-IMPL.cpp  Vector3D-IMPL.cpp
Module_Implementations/Hittable-IMPL/: HitRecord-IMPL.cpp  HittableList-IMPL.cpp  Sphere-IMPL.cpp
Module_Implementations/Material-IMPL/: Dielectric-IMPL.cpp  Lambertian-IMPL.cpp  Metal-IMPL.cpp
Module_Interfaces/: Camera.cppm  Color.cppm  Interval.cppm  Randomizer.cppm  Ray.cppm  Raytracer.cppm  Vector3D.cppm
Module_Interfaces/Hittable/: HitRecord.cppm  Hittable.cppm  HittableList.cppm  Sphere.cppm
Module_Interfaces/Material/: Dielectric.cppm  Lambertian.cppm  Material.cppm  Metal.cppm
Ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  ObjectOnlyRaytracer  build.ninja  cmake_install.cmake
src/: main.cpp
